@@ -1,9 +1,5 @@
 package corpus::Foo;
 
-# for Dist::Zilla 6.x this needs to be in corpus/DZ2/corpus/Foo.pm
-# this copy of the file can be removed when/if we drop support for
-# Dist::Zilla 5.x
-
 use Moose;
 use Dist::Zilla::File::InMemory;
 
