@@ -20,7 +20,7 @@ remove = Dist::Zilla::Role::FileMunger
 remove = Test::DZil
 
 [Prereqs]
-Dist::Zilla = 0
+Dist::Zilla = 5.0
 
 [MetaNoIndex]
 directory = corpus
