@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Dist::Zilla 6.x compatability
 
 0.05      2016-03-16 11:00:06 -0400
   - Search for files in the building dist first
